--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<h3><p>Новости</p></h3>
 <li>
 	<div class="news-block">
-		<h6>21.03.2019 Призеры Республиканского фестиваля «Студенческая весна»</h6>
+			<h6>21.03.2019 Призеры Республиканского фестиваля «Студенческая весна»</h6>
 	<img src="img/news1.jpg" class="responsive-img" width="30%">
 	<p>20 марта 2019 года на базе Дворца культуры «Химик» г. Новочебоксарск состоялся республиканский фестиваль «Студенческая весна»
 для профессиональных образовательных организаций.</p>
@@ -23,7 +23,16 @@
 </div>
 
 </li>
+<li>
+	<div class="news-two">
+		<h6>19.03.2019 Воссоединение Крыма с Россией</h6>
+		<img src="img/news2.jpg" class="responsive-img" width="30%">
+		<p>В 2014 году в Российской Федерации произошло важное событие государственного масштаба, имевшее огромное значение для каждого россиянина еще и с патриотической точки зрения: частью нашей страны стал Крымский полуостров (Крым).
 
+В честь этого события 18 марта в нашей стране отмечается важный праздник – День воссоединения Крыма с Россией. На территории Республики Крым этот день является праздничным и выходным согласно республиканскому закону №80-ЗРК/2015 от 3 марта 2015 года.</p>
+<a href="">Подробнее...</a>
+	</div>
+</li>
 
 
 
