--- a/index.html
+++ b/index.html
@@ -1,53 +1,55 @@
-<!DOCTYPE html>
-	<html lang="en">
-	<head>
-		<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet"> 
-		<link rel="stylesheet" href="materialize.css">
-		<link rel="stylesheet" href="style.css">
-		<meta charset="UTF-8">
-		<title>Document</title>
-	</head>
-<body>
-<ul>
-	
-			<li>
-		<div class="news-text">
-			<h3><p>Новости</p></h3>
-<li>
-	<div class="news-block">
-			<h6>21.03.2019 Призеры Республиканского фестиваля «Студенческая весна»</h6>
-	<img src="img/news1.jpg" class="responsive-img" width="30%">
-	<p>20 марта 2019 года на базе Дворца культуры «Химик» г. Новочебоксарск состоялся республиканский фестиваль «Студенческая весна»
-для профессиональных образовательных организаций.</p>
-<a href="">Подробнее...</a>
-</div>
-
-</li>
-<li>
-	<div class="news-two">
-		<h6>19.03.2019 Воссоединение Крыма с Россией</h6>
-		<img src="img/news2.jpg" class="responsive-img" width="30%">
-		<p>В 2014 году в Российской Федерации произошло важное событие государственного масштаба, имевшее огромное значение для каждого россиянина еще и с патриотической точки зрения: частью нашей страны стал Крымский полуостров (Крым).
-
-В честь этого события 18 марта в нашей стране отмечается важный праздник – День воссоединения Крыма с Россией. На территории Республики Крым этот день является праздничным и выходным согласно республиканскому закону №80-ЗРК/2015 от 3 марта 2015 года.</p>
-<a href="">Подробнее...</a>
+	<!DOCTYPE html>
+		<html lang="en">
+		<head>
+			<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet"> 
+			<link rel="stylesheet" href="materialize.css">
+			<link rel="stylesheet" href="style.css">
+	        <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
+	  <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+			<meta charset="UTF-8">
+			<title>Document</title>
+		</head>
+	<body>
+	<ul>
+		
+				<li>
+			<div class="news-text">
+				<h3><p>Новости</p></h3>
+	<li>
+		<div class="news-block">
+				<h6>21.03.2019 Призеры Республиканского фестиваля «Студенческая весна»</h6>
+		<img src="img/news1.jpg" class="responsive-img" width="30%">
+		<p>20 марта 2019 года на базе Дворца культуры «Химик» г. Новочебоксарск состоялся республиканский фестиваль «Студенческая весна»
+	для профессиональных образовательных организаций.</p>
+	<a href="">Подробнее...</a>
 	</div>
-</li>
 
+	</li>
+	<li>
+		<div class="news-two">
+			<h6>19.03.2019 Воссоединение Крыма с Россией</h6>
+			<img src="img/news2.jpg" class="responsive-img" width="30%">
+			<p>В 2014 году в Российской Федерации произошло важное событие государственного масштаба, имевшее огромное значение для каждого россиянина еще и с патриотической точки зрения: частью нашей страны стал Крымский полуостров (Крым).
 
-
+	В честь этого события 18 марта в нашей стране отмечается важный праздник – День воссоединения Крыма с Россией. На территории Республики Крым этот день является праздничным и выходным согласно республиканскому закону №80-ЗРК/2015 от 3 марта 2015 года.</p>
+	<a href="">Подробнее...</a>
 		</div>
-</li>
-		
-		
-		
-		
-		
-		
-</ul>
-<script src="jquery.js"></script>
-<script src="materialize.js"></script>
-<script src="script.js"></script>
-</body>
-</html>
+	</li>
+
+
+
+			</div>
+	</li>
+			
+			
+			
+			
+			
+			
+	</ul>
+	<script src="jquery.js"></script>
+	<script src="materialize.js"></script>
+	<script src="script.js"></script>
+	</body>
+	</html>
 
