--- a/index.html
+++ b/index.html
@@ -1,55 +1,102 @@
 	<!DOCTYPE html>
 		<html lang="en">
 		<head>
-			<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet"> 
-			<link rel="stylesheet" href="materialize.css">
-			<link rel="stylesheet" href="style.css">
+			<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link type="text/css" rel="stylesheet" href="materialize.min.css"  media="screen,projection"/>
+	<link href="style.css" rel="stylesheet" type="text/css"> 
+	<link rel="stylesheet" type="text/css" media="all" href="stellarnav.css">
 	        <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
+	        <link href="https://fonts.googleapis.com/css?family=PT+Sans|Roboto" rel="stylesheet">
 	  <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
 			<meta charset="UTF-8">
 			<title>Document</title>
 		</head>
 	<body>
-	<ul>
+	
+<div class="news-block">
+	
+<ul>
+
+<li>
+	<a href="">
+		<h6>События
+		</h6>
+	</a>
+</li>
+
+<li>
+	<div class="news-one">
+	<a href="">
+		<img src="image/news1.jpg" class="responsive-img" style="width: 330px; height:200px">
+		Неделя науки (12 Февраля 2019г.)
+	</a>
+	</div>
+</li>
+
+<li>
+	<div class="news-one">
+		<a href="">
+			<img src="image/news2.jpg" class="responsive-img" style="width: 330px; height:200px">
+		Молодая Инновационная Чувашия (22 Марта 2019г.)
+	</a>
+	</div>
+</li>
+
+<li>
+	<div class="news-one">
+		<a href="">
+			<img src="image/news3.jpg" class="responsive-img" style="width:330px; height:200px">Студенческая Весна(15 Марта 2019г.)
+		</a>
+	</div>
+</li>
+
+<li>
+	<div class="news">
 		
-				<li>
-			<div class="news-text">
-				<h3><p>Новости</p></h3>
-	<li>
-		<div class="news-block">
-				<h6>21.03.2019 Призеры Республиканского фестиваля «Студенческая весна»</h6>
-		<img src="img/news1.jpg" class="responsive-img" width="30%">
-		<p>20 марта 2019 года на базе Дворца культуры «Химик» г. Новочебоксарск состоялся республиканский фестиваль «Студенческая весна»
-	для профессиональных образовательных организаций.</p>
-	<a href="">Подробнее...</a>
+	<a href="">
+	Призеры фестиваля «Студенческая весна»
+	</a>
+	<p>
+	21 Марта 2019г.
+	</p>
+	<a href="">
+	Воссоединение Крыма с Россией
+	</a>
+	<p>
+	19 Марта 2019г.
+	</p>
+	<a href="">
+		<h6>Новости</h6>
+	</a>
 	</div>
 
-	</li>
+</li>
+</ul>
+
+</div>
+
+<div class="banners-health">
+	<ul>
 	<li>
-		<div class="news-two">
-			<h6>19.03.2019 Воссоединение Крыма с Россией</h6>
-			<img src="img/news2.jpg" class="responsive-img" width="30%">
-			<p>В 2014 году в Российской Федерации произошло важное событие государственного масштаба, имевшее огромное значение для каждого россиянина еще и с патриотической точки зрения: частью нашей страны стал Крымский полуостров (Крым).
-
-	В честь этого события 18 марта в нашей стране отмечается важный праздник – День воссоединения Крыма с Россией. На территории Республики Крым этот день является праздничным и выходным согласно республиканскому закону №80-ЗРК/2015 от 3 марта 2015 года.</p>
-	<a href="">Подробнее...</a>
-		</div>
-	</li>
+	
+	</li>	
 
 
 
-			</div>
-	</li>
-			
-			
-			
-			
-			
-			
+
 	</ul>
-	<script src="jquery.js"></script>
-	<script src="materialize.js"></script>
-	<script src="script.js"></script>
+
+
+
+</div>
+
+	<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js "></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="materialize.min.js"></script>
+	<script type="text/javascript" src="stellarnav.min.js"></script>
+	<script type="text/javascript" src="script.js"></script>
 	</body>
 	</html>
 
