--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 	<li>
 		<a href="">
-			<h3>События
+			<h3><b>События</b>
 			</h3>
 		</a>
 	</li>
@@ -57,7 +57,7 @@
 	<li>
 		<div class="news">
 			<a href="">
-			<h5>Все Новости</h5>
+			<h5><b>Все Новости</b></h5>
 		</a>
 		<a href="">
 		Призеры фестиваля «Студенческая весна»
@@ -82,7 +82,7 @@
 	<div class="banners">
 		<ul>
 	<li>
-		<h3>Полезно знать</h3>
+		<h3><b>Полезно знать</b></h3>
 	</li>
 		<li>
 		<div class="banner-one">
