--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
 	<ul>
 
 	<li>
-		<a href="">
+	<div class="news-block-name">
 			<h3><b>События</b>
 			</h3>
-		</a>
+			<a href=""><h5><b>Все События</b></h5></a>
+		</div>
 	</li>
 
 	<li>
